--- a/package.json
+++ b/package.json
@@ -3,16 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.11.16",
+    "@mui/x-data-grid": "^6.0.4",
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.2.3",
+    "mui": "^0.0.1",
+    "quill": "^1.3.7",
+    "quill-delta": "^5.0.0",
+    "quill-delta-to-html": "^0.12.1",
+    "quill-image-resize-module": "^3.0.0",
+    "quill-image-resize-module--fix-imports-error": "^3.0.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.0.5",
     "react-router-config": "^5.0.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "^2.1.3",
+    "sass": "^1.60.0",
+    "wavesurfer.js": "^6.6.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
